<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantDetailActivity">
<ScrollView
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutTopProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_left_right_bottom_green"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/hamBurgerIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_white" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hamBurgerIcon"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPlantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsblack"
                    android:shadowColor="@color/text_shadow_white"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="1"
                    android:text="@string/bonsai_plant"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/imgTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_temperature" />

                    <TextView
                        android:id="@+id/txtTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imgTemperature"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/temperature"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTemperature"
                        android:layout_toEndOf="@+id/imgTemperature"
                        android:fontFamily="@font/poppinsregular"
                        android:text="30 \u00B0 C"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imgHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_height" />

                    <TextView
                        android:id="@+id/txtHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imgHeight"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/height"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtHeight"
                        android:layout_toEndOf="@+id/imgHeight"
                        android:fontFamily="@font/poppinsregular"
                        android:text="35-36 cm"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imgLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_light" />

                    <TextView
                        android:id="@+id/txtLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imgLight"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/light"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtLight"
                        android:layout_toEndOf="@+id/imgLight"
                        android:fontFamily="@font/poppinsregular"
                        android:text="15- 16h"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>

            <mukesh.plantcallenge.VerticalTextView
                android:id="@+id/textPlantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hamBurgerIcon"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-25dp"
                android:fontFamily="@font/poppinsblack"
                android:rotation="180"
                android:text="@string/bonsai_plant"
                android:textSize="45sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutTopProduct"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/details"
                android:textColor="@color/textcolor"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/txtPlantDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDetailTitle"
                android:layout_marginTop="18sp"
                android:fontFamily="@font/poppinsregular"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry."
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/txtPlantDesc"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="$50.99"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:elevation="6dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:paddingStart="50dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="50dp"
                    android:paddingBottom="12dp"
                    android:text="@string/buy"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/plant_four" />
    </RelativeLayout>
</ScrollView>
</RelativeLayout>